welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:24: error: not found: value o
      setCouleurBrosse(T((j + o) % taille));
                              ^Array2:24: error: not found: value taille
      setCouleurBrosse(T((j + o) % taille));
                                   ^